# MSmacVNC

./: CMakeLists.txt
.claude/: settings.local.json
src/: AppDelegate.m  Info.plist.in  ScreenCapturer.m  mac.h  mac.m  main.m
